--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/datng/OneDrive/college/unlCourses/csce361-software-engineering/cs361/library/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Reid/Documents/College Stuff/1. Spring 2019/CSCE361/git/library/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
